Clean up libclang's temporary files on KDevelop start

I plan to place other temporary files created by KDevelop into the
session temporary directory in the future. For example, KDevelop leaves
behind many temporary kdevelop.* files after exit. Not all KDevelop
tests remove their temporary files on exit. The session temporary
directory use can be wrapped into convenient classes derived from
QTemporaryDir and QTemporaryFile.

BUG: 412707
CCBUG: 378909
FIXED-IN: 5.13.231200